move piano css, fix Chat.tsx spacing

--- a/src/index.css
+++ b/src/index.css
@@ -134,59 +134,6 @@ input[type="range"]:hover {
 
 }
 
-#piano {
-  width: 95%;
-  height: 20%;
-  margin: auto;
-  position: relative;
-  overflow: hidden;
-  padding-left: 1%;
-}
-
-#piano .key {
-  float: left;
-  width: 1.8%;
-  height: 90%;
-  border: 1px solid #000;
-  background: #fff;
-  margin-left: -.5%;
-  margin-bottom: 100%;
-  box-shadow: 1px 2px 5px #000;
-  -webkit-box-shadow: 1px 2px 5px #000;
-  -moz-box-shadow: 1px 2px 5px #000;
-  border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  transition: background 4s ease-out;
-  -webkit-transition: background 4s ease-out;
-  -moz-transition: background 4s ease-out;
-  -o-transition: background 4s ease-out;
-  padding: 0;
-  overflow: hidden;
-}
-
-#piano .key.c,#piano .key.f {
-  margin-left: 0;
-}
-
-#piano .key.sharp {
-  width: 1.2%;
-  height: 50%;
-  background: #000;
-  margin-left: -.9%;
-  position: relative;
-}
-
-#piano .key.loading {
-  background: #888;
-}
-
-#piano .key.play {
-  transform: translateY(1%);
-  -webkit-transform: translateY(1%);
-  -webkit-box-shadow: 0 1px 2px #000;
-}
-
 .ease-out {
   transition: left .1s ease-out;
   -webkit-transition: left .1s ease-out;
